# Capstone_Project

./: README.md
Autonomous_Robotics_SLAM_Project/: README.md
Autonomous_Robotics_SLAM_Project/launch/: slam_explore.launch
Autonomous_Robotics_SLAM_Project/maps/: map.yaml
Autonomous_Robotics_with_SLAM_Project/Autonomous_Robotics_SLAM_Project/: package.xml
Autonomous_Robotics_with_SLAM_Project/Autonomous_Robotics_SLAM_Project/scripts/: autonomous_explore.py
Autonomous_Robotics_with_SLAM_Project/Autonomous_Robotics_SLAM_Project/worlds/: custom_world.world
Autonomous_Robotics_with_SLAM_Project/catkin_ws/src/turtlebot3_gazebo/worlds/: custom_world.world
Autonomous_Robotics_with_SLAM_Project/catkin_ws/src/turtlebot3_slam/: slam_gmapping.launch
Autonomous_Robotics_with_SLAM_Project/catkin_ws/src/turtlebot3_teleop/: key_teleop.launch
Autonomous_Robotics_with_SLAM_Project/launch_files/: start_all.launch
Autonomous_Robotics_with_SLAM_Project/maps/: custom_map.yaml
Autonomous_Robotics_with_SLAM_Project/scripts/: autonomous_explore.py
