<package format="2">
  <name>autonomous_robotics_slam</name>
  <version>0.1.0</version>
  <description>Autonomous SLAM Navigation</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>